src/test/ui/issues/issue-34334.stderr
error: expected expression, found reserved identifier `_`
  --> $DIR/issue-34334.rs:2:23
   |
LL |     let sr: Vec<(u32, _, _) = vec![];
   |                       ^ expected expression

error: expected expression, found reserved identifier `_`
  --> $DIR/issue-34334.rs:2:26
   |
LL |     let sr: Vec<(u32, _, _) = vec![];
   |                          ^ expected expression

error: expected one of `,` or `>`, found `=`
  --> $DIR/issue-34334.rs:2:29
   |
LL |     let sr: Vec<(u32, _, _) = vec![];
   |         ---                 ^ expected one of `,` or `>`
   |         | |
   |         | help: use `=` if you meant to assign
   |         while parsing the type for `sr`

error[E0423]: expected value, found struct `Vec`
  --> $DIR/issue-34334.rs:2:13
   |
LL |     let sr: Vec<(u32, _, _) = vec![];
   |             ^^^ did you mean `Vec { /* fields */ }`?

error[E0308]: mismatched types
  --> $DIR/issue-34334.rs:2:31
   |
LL |     let sr: Vec<(u32, _, _) = vec![];
   |                               ^^^^^^ expected `bool`, found struct `std::vec::Vec`
   |
   = note: expected type `bool`
            found struct `std::vec::Vec<_>`
   = note: this error originates in a macro outside of the current crate (in Nightly builds, run with -Z external-macro-backtrace for more info)

error[E0070]: invalid left-hand side of assignment
  --> $DIR/issue-34334.rs:2:29
   |
LL |     let sr: Vec<(u32, _, _) = vec![];
   |             --------------- ^
   |             |
   |             cannot assign to this expression

error[E0599]: no method named `iter` found for unit type `()` in the current scope
  --> $DIR/issue-34334.rs:9:36
   |
LL |     let sr2: Vec<(u32, _, _)> = sr.iter().map(|(faction, th_sender, th_receiver)| {}).collect();
   |                                    ^^^^ method not found in `()`

error: aborting due to 7 previous errors

Some errors have detailed explanations: E0070, E0308, E0423, E0599.
For more information about an error, try `rustc --explain E0070`.
